2008-06-26  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dir.el (tool-bar): Require.

	* vc.el (ewoc, tool-bar): Do not require.

2008-06-26  Kenichi Handa  <handa@m17n.org>

	* composite.el (terminal-composition-base-character-p): New function.
	(terminal-composition-function):
	Use terminal-composition-base-character-p.  Include the base character
	in the composition.
	(auto-compose-chars): Don't check font-object for terminal display.

2008-06-26  Glenn Morris  <rgm@gnu.org>

	* doc-view.el (bookmark-make-record-default):
	* image-mode.el (bookmark-make-record-default): Fix declaration.

	* calendar/calendar.el (calendar-date-echo-text): Doc fix.
	Add default :value for sexp type.
	(calendar-month-edges): New variable.
	(calendar-month-edges): New function.
	(calendar-recompute-layout-variables): Set calendar-month-edges.
	(calendar-intermonth-header, calendar-intermonth-text): New options.
	(calendar-insert-at-column): New function.
	(calendar-generate-month): Use calendar-insert-at-column.
	Handle intermonth text.  Add 'date property.
	(calendar-column-to-month): Remove function.
	(calendar-column-to-segment): New function.
	(calendar-cursor-to-date): Use calendar-column-to-segment.
	Check 'date property.

	* calendar/calendar.el (calendar-print-other-dates):
	Handle mouse events.
	* calendar/cal-menu.el (calendar-mouse-print-dates): Remove function.
	(cal-menu-context-mouse-menu): Use calendar-print-other-dates.

	* calendar/holidays.el (calendar-cursor-holidays): Handle mouse events.
	* calendar/cal-menu.el (calendar-mouse-holidays): Remove function.
	(cal-menu-context-mouse-menu): Use calendar-cursor-holidays.

	* calendar/cal-move.el (calendar-cursor-to-nearest-date):
	Use calendar-column-to-segment, calendar-month-edges, and
	the 'date property to handle intermonth text.

	* calendar/cal-iso.el (calendar-iso-from-absolute): Add autoload cookie.

	* calendar/cal-menu.el (cal-menu-moon-menu, cal-menu-diary-menu)